--- a/style.css
+++ b/style.css
@@ -12,6 +12,19 @@ h1 {
   text-align: center;
 }
 
+#div-container {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(16, 20px);
+  }
+  
+  #div-container div {
+    width: 20px;
+    height: 20px;
+    border: 1px solid black;
+  }
+  
+
 footer {
     text-align: center; 
     padding: 10px;
