--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
 body {
   height: 100vh;
+  text-align: center; 
 }
 
-h1 {
-  text-align: center;
+#gridButton {
+    margin-bottom: 25px;
 }
 
 #div-container {
@@ -21,13 +22,9 @@ h1 {
   #div-container div {
     width: 20px;
     height: 20px;
-    border: 1px solid black;
+    border: 1px solid rgb(58, 57, 57);
+    background-color: rgb(236, 236, 240);
   }
-
-  #div-container div:hover {
-    background-color: gold;
-  }
-  
 
 footer {
     text-align: center; 
