--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
 
 body {
   height: 100vh;
@@ -17,10 +12,14 @@ body {
     justify-content: center;
     display: grid;
     grid-template-columns: repeat(16, auto); 
+    width: 400px;
+    height: 400px;
+    margin: 0 auto;
   }
   
   #div-container div {
     width: 20px;
+    margin: -1px;
     height: 20px;
     border: 1px solid rgb(58, 57, 57);
     background-color: rgb(236, 236, 240);
