--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 
 body {
   height: 100vh;
-  text-align: center; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  margin: 0;
 }
 
 #gridButton {
@@ -14,6 +18,8 @@ body {
     grid-template-columns: repeat(16, auto); 
     width: 400px;
     height: 400px;
+    max-width: 90vw;
+    max-height: 90vw;
     margin: 0 auto;
   }
   
