--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Roboto', sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -7,8 +8,39 @@ body {
   margin: 0;
 }
 
+h1 {
+  margin-bottom: 0;
+}
+
+#button-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+#gridButton, #erase {
+  width: 90px;
+  height: 50px;
+  border: 0;
+  margin: 20px;
+  border-radius: 10px;
+  font-size: 16px;
+  color: white;
+  cursor: pointer;
+
+}
+
 #gridButton {
-    margin-bottom: 25px;
+  background-color: rgb(51, 153, 51);
+}
+
+#erase {
+  background-color: rgb(240, 240, 240);
+  color: rgb(51, 51, 51);
+}
+
+#gridButton:hover, #erase:hover {
+  opacity: .80;
 }
 
 #div-container {
@@ -20,20 +52,49 @@ body {
     max-width: 100%;
     max-height: 100%;
     margin: 0 auto;
+    border: 5px solid rgba(124, 121, 121, 0.50);
+
   }
   
   #div-container div {
     width: 20px;
-    margin: -1px;
     height: 20px;
-    border: 1px solid rgb(58, 57, 57);
+    border: 1px solid rgba(124, 121, 121, 0.10);
     background-color: rgb(236, 236, 240);
   }
 
-footer {
+a {
+  text-decoration: none;
+  color: black;
+  font-weight: 300;
+  transition: all 0.2s ease-in-out;
+  }
+  
+  a:hover {
+  font-weight: 400;
+  cursor: pointer;
+  }
+  
+  a:focus {
+  color: black;
+  font-weight: 400;
+  }
+  
+  a:active {
+  color: white; 
+  background-color: #aaa;
+  font-weight: 500;
+  }
+
+  footer {
     text-align: center; 
     padding: 10px;
     position: relative;
     bottom: 0;
     width: 100%;
+    font-weight: 300;
 }
+
+
+
+
