--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h1 {
     max-width: 100%;
     max-height: 100%;
     margin: 0 auto;
-    border: 5px solid rgba(124, 121, 121, 0.50);
+    /* border: 5px solid rgba(124, 121, 121, 0.50); */
 
   }
   
